--- a/Sunshine/Sunshine/app/src/main/res/menu/menu.xml
+++ b/Sunshine/Sunshine/app/src/main/res/menu/menu.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:title="@string/show_location"
+        android:orderInCategory="50"
+        android:id="@+id/action_show_location"
+        app:showAsAction="never" />
 </menu>
