--- a/Sunshine/Sunshine/app/src/main/res/layout/activity_main.xml
+++ b/Sunshine/Sunshine/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.android.vladulutz.sunshine.MainActivity">
+    tools:context="com.android.vladulutz.sunshine.MainActivity"
+    android:id="@+id/container">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
